# FinalYearProject

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
engine/include/: DebugLogger.h
include/: Pch.h
include/engine/: Actor.h  Callback.h  Camera.h  Component.h  Core.h  EditorCamera.h  Engine.h  EngineMath.h  EngineMemory.h  EngineRandom.h  EngineState.h  MainCamera.h  MeshComponent.h  ProfileTimer.h  Scene.h  Timers.h  UiHelpers.h
include/engine/audio/: AudioBuffer.h  AudioSource.h  SoundComponent.h
include/engine/event/: EventHandler.h  Input.h
include/engine/loader/: AssimpLoader.h  Audio.h  CommonLoader.h  Disk.h  FileExplorer.h  Loader.h  LoadingTask.h  MaterialLoader.h  ModelDestroyer.h  ModelLoader.h  MtlMaterialInformation.h  RawMesh.h  ResourcePool.h  SceneLoader.h  ShaderLoader.h  TextureLoader.h  ThreadPool.h  physicsMesh.h
include/engine/logger/: Logger.h
include/engine/physics/: Colliders.h  HitInfo.h  PhysicsConversions.h  PhysicsCore.h  PhysicsDebugDrawer.h  PhysicsMeshBuffer.h  RigidBody.h
include/engine/rendering/: BloomPass.h  ColourGrading.h  Lighting.h  MaterialSubComponent.h  MeshRenderer.h  UberLayer.h  UberMask.h  UberMaterial.h
include/engine/serialize/: ComponentSerializer.h  SceneSerializer.h  SerializeMacros.h  Serializer.h
include/engine/ui/: Drawable.h  RendererImGui.h  Ui.h
include/game/: GameInput.h  MyScene.h  Rotator.h
include/graphics/: CameraMatrices.h  CameraSettings.h  Cubemap.h  GraphicsDefinitions.h  GraphicsFunctions.h  GraphicsLighting.h  GraphicsState.h  Lighting.h  LtcSheenTable.h  MaterialData.h  Materials.h  Mesh.h  Renderer.h  RendererData.h  RendererHelpers.h  Shader.h  ShadowMapping.h  SubMesh.h  Texture.h  Vertices.h  WindowHelpers.h
include/graphics/buffers/: Buffers.h  Cubemap.h  FramebufferObject.h  HdrTexture.h  RenderBufferObject.h  ShaderStorageBufferObject.h  Texture.h  Texture3DObject.h  TextureArrayObject.h  TextureBufferObject.h  TexturePool.h  Ubo.h  UniformBufferObject.h
include/graphics/postProcessing/: PostProcessLayer.h
include/helpers/: ContainerAlgorithms.h  EngineMath.h  FileLoader.h  Format.h  Statistics.h  StringManipulation.h  Timers.h
include/helpers/logger/: Logger.h  LoggerMacros.h
include/helpers/profiler/: ProfileTimer.h  Profiler.h
resources/materials/: AnotherLayer.mlpcy  Backdrop.mlpcy  Backdrop.mpcy  Red.mpcy  TestLayer.mlpcy
resources/materials/SimpleDemoMaterials/: Blue.mlpcy  Blue.mpcy  Floor.mpcy  Green.mlpcy  Green.mpcy  Metallic.mlpcy  Metallic.mpcy  Red.mlpcy  Red.mpcy
resources/materials/examples/: Dust.mlpcy
resources/materials/graphics/: accentLayer.mlpcy  accentMat.mpcy  layerDiffuse0.1.mlpcy  layerDiffuse0.2.mlpcy  layerDiffuse0.3.mlpcy  layerDiffuse0.4.mlpcy  layerDiffuse0.5.mlpcy  layerDiffuse0.6.mlpcy  layerDiffuse0.7.mlpcy  layerDiffuse0.8.mlpcy  layerDiffuse0.9.mlpcy  layerDiffuse1.0.mlpcy  layerSpecular0.1.mlpcy  layerSpecular0.2.mlpcy  layerSpecular0.3.mlpcy  layerSpecular0.4.mlpcy  layerSpecular0.5.mlpcy  layerSpecular0.6.mlpcy  layerSpecular0.7.mlpcy  layerSpecular0.8.mlpcy  layerSpecular0.9.mlpcy  layerSpecular1.0.mlpcy  matDiffuse0.1.mpcy  matDiffuse0.2.mpcy  matDiffuse0.3.mpcy  matDiffuse0.4.mpcy  matDiffuse0.5.mpcy  matDiffuse0.6.mpcy  matDiffuse0.7.mpcy  matDiffuse0.8.mpcy  matDiffuse0.9.mpcy  matDiffuse1.0.mpcy  matSpecular0.1.mpcy  matSpecular0.2.mpcy  matSpecular0.3.mpcy  matSpecular0.4.mpcy  matSpecular0.5.mpcy  matSpecular0.6.mpcy  matSpecular0.7.mpcy  matSpecular0.8.mpcy  (+2 more)
resources/models/: Backdrop.glb  Basic.glb  ClothBall.glb  ClothBallDense.glb  ClothBallDenseDense.glb  Dust.glb  Grid20x20.glb  MaterialBall.glb  MaterialBallUe5.glb  MoriBall.glb  Plane.glb  Scientist.glb
resources/models/blueSphere/: BlueSphere.mtl
resources/models/bricks/: Bricks.mtl
resources/models/defaultObjects/: DefaultSphere.glb  DefaultTorus.glb  DefaultWhite.mpcy  WhiteLayer.mlpcy
resources/models/leatherBall/: LeatherBall.mtl
resources/models/pillars/: Pillars.mtl
resources/models/renderer/: UnitSphere.glb
resources/models/stoneFloor/: MedievalStoneFloor.mtl
resources/models/utahTeapot/: UtahTeapot.glb
resources/scenes/: BallsOnly.pcy  BrdfTest.pcy  ExampleMaterials.pcy  GameExample.pcy  LightDemo.pcy  PhysicsTest.pcy  RigidBodyParenting.pcy  RotatingBall.pcy  SSSRTestScene.pcy  SimpleDemoScene.pcy  SoundTest.pcy  SphereTest.pcy  SpotlightTest.pcy  TileClassificationTest.pcy  test.pcy  test2.pcy  test3.pcy
resources/shaders/: Camera.glsl  Colour.glsl  FullscreenTriangle.vert  GBuffer.glsl  Maths.glsl  Skybox.frag  Triangle.frag  Triangle.vert  test.comp
resources/shaders/brdf/: DiffuseDirectionalAlbedo.comp  FullSpecularDirectionalAlbedo.comp  FullSpecularDirectionalAlbedoAverage.comp  Ggx.glsl  GgxDirectionalAlbedo.comp  GgxDirectionalAlbedoAverage.comp  GgxSpecMissing.comp  GgxSpecMissingAverage.comp  Hammersley.glsl  IntegrateBrdf.frag  SheenDirectionalAlbedo.comp  SheenMissing.comp  SpecularMissing.comp
resources/shaders/classification/: ClassificationBuffer.glsl  DebugOverlay.comp  (+1 more)
src/: DebugLogger.cpp  Main.cpp  main.cpp
src/engine/: Actor.cpp  Camera.cpp  Component.cpp  Core.cpp  EditorCamera.cpp  EngineMath.cpp  EngineRandom.cpp  EngineState.cpp  MainCamera.cpp  MeshComponent.cpp  ProfileTimer.cpp  Scene.cpp  Timers.cpp  UiHelpers.cpp
src/game/: CameraController.cpp  CameraController.h  CollisionInfo.cpp  CollisionInfo.h  ExampleScene.cpp  ExampleScene.h  GameInput.cpp  Initialiser.cpp  Initialiser.h  Lava.cpp  Lava.h  LookAtActor.cpp  LookAtActor.h  MyScene.cpp  MyTestActor.cpp  MyTestActor.h  Rotator.cpp  Spammer.cpp  Spammer.h
src/graphics/: Cubemap.cpp  GraphicsDefinitions.cpp  GraphicsFunctions.cpp  GraphicsState.cpp  Lighting.cpp  LtcSheenTable.cpp  MaterialData.cpp  Materials.cpp  Mesh.cpp  Primitives.cpp  Primitives.h  Renderer.cpp  RendererData.cpp  RendererHelpers.cpp  Shader.cpp  ShadowMapping.cpp  Skybox.cpp  Skybox.h  SubMesh.cpp  Texture.cpp  Vertices.cpp  WindowHelpers.cpp
src/helpers/: EngineMath.cpp  FileLoader.cpp  Format.cpp  StringManipulation.cpp  Timers.cpp
(+183 files in other folders)
